<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_location"
            android:title="@string/ubicacion" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_perfil"
            android:title="@string/perfil" />
        <item
            android:id="@+id/nav_inmueble"
            android:icon="@drawable/ic_inmuebles"
            android:title="@string/inmuebles"/>
        <item
            android:id="@+id/nav_inquilino"
            android:icon="@drawable/ic_inquilino"
            android:title="@string/inquilinos"/>
        <item
            android:id="@+id/nav_contrato"
            android:icon="@drawable/ic_contrato"
            android:title="@string/contratos"/>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout"/>
    </group>
</menu>