<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.peluffo.inmobiliariapeluffo.ui.home.HomeFragment"
        android:label="@string/inicio"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.peluffo.inmobiliariapeluffo.ui.perfil.PerfilFragment"
        android:label="@string/perfil"
        tools:layout="@layout/fragment_perfil"/>
    <fragment
        android:id="@+id/nav_inmueble"
        android:name="com.peluffo.inmobiliariapeluffo.ui.inmueble.InmuebleFragment"
        android:label="@string/inmuebles"
        tools:layout="@layout/fragment_inmueble">
        <action
            android:id="@+id/action_nav_inmueble_to_inmuebleDetalleFragment"
            app:destination="@id/inmuebleDetalleFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_inquilino"
        android:name="com.peluffo.inmobiliariapeluffo.ui.inquilino.InquilinoFragment"
        android:label="@string/inquilinos"
        tools:layout="@layout/fragment_inquilino">
        <action
            android:id="@+id/action_nav_inquilino_to_inquilinoDetalleFragment"
            app:destination="@id/inquilinoDetalleFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_contrato"
        android:name="com.peluffo.inmobiliariapeluffo.ui.contrato.ContratoFragment"
        android:label="@string/contratos"
        tools:layout="@layout/fragment_contrato">
        <action
            android:id="@+id/action_nav_contrato_to_contratoDetalleFragment"
            app:destination="@id/contratoDetalleFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_logout"
        android:name="com.peluffo.inmobiliariapeluffo.ui.logout.LogoutFragment"
        android:label="@string/logout"
        tools:layout="@layout/fragment_logout"/>
    <fragment
        android:id="@+id/inmuebleDetalleFragment"
        android:name="com.peluffo.inmobiliariapeluffo.ui.inmueble.InmuebleDetalleFragment"
        android:label="Inmueble"
        tools:layout="@layout/fragment_inmueble_detalle">
        <action
            android:id="@+id/action_inmuebleDetalleFragment_to_nav_inmueble"
            app:destination="@id/nav_inmueble" />
    </fragment>
    <fragment
        android:id="@+id/inquilinoDetalleFragment"
        android:name="com.peluffo.inmobiliariapeluffo.ui.inquilino.InquilinoDetalleFragment"
        android:label="Inquilino"
        tools:layout="@layout/fragment_inquilino_detalle" >
        <action
            android:id="@+id/action_inquilinoDetalleFragment_to_nav_inquilino"
            app:destination="@id/nav_inquilino" />
    </fragment>
    <fragment
        android:id="@+id/contratoDetalleFragment"
        android:name="com.peluffo.inmobiliariapeluffo.ui.contrato.ContratoDetalleFragment"
        android:label="Contrato"
        tools:layout="@layout/fragment_contrato_detalle" >
        <action
            android:id="@+id/action_contratoDetalleFragment_to_nav_contrato"
            app:destination="@id/nav_contrato" />
        <action
            android:id="@+id/action_contratoDetalleFragment_to_pagoFragment"
            app:destination="@id/pagoFragment" />
    </fragment>
    <fragment
        android:id="@+id/pagoFragment"
        android:name="com.peluffo.inmobiliariapeluffo.ui.contrato.PagoFragment"
        android:label="Detalle de Pagos"
        tools:layout="@layout/fragment_pago" >
        <action
            android:id="@+id/action_pagoFragment_to_contratoDetalleFragment"
            app:destination="@id/contratoDetalleFragment" />
    </fragment>
</navigation>